bad/div_int_overflow.example_compiler_output
ERROR
[1mbad/div_int_overflow.lat:3:14: [1;31merror: [0;1minteger overflow in expression -2147483648 / -1[m
	-2147483648 / (-1);
	            [1;32m^[m
